--- a/src/app/contractphysician/confirmation.modal.html
+++ b/src/app/contractphysician/confirmation.modal.html
@@ -20,18 +20,22 @@
     </div>
 </div>
 <ng-template #error_content>
-    <div class="modal-header">
-        <h4 class="modal-title">Error</h4>
-        <button type="button" class="close" aria-label="Close" (click)="close()">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    <div class="modal-body error-modal">
-        <p>{{errorMessage}} </p>
-    </div>
-    <div class="modal-footer">
-        <button type="button" class="btn btn-default btn-sm" style="border-radius: 25px" (click)="close()">
-            <span style="font-size: 15px;">Close</span>
-        </button>
+    <div class="modal-body error-modal error-popup">
+        <div class="modal-popup-alert">
+            <div class="modal-close-button">
+                <i class="fa fa-times-circle closeButton" aria-hidden="true" (click)="close()"></i>
+            </div>
+            <div>
+                <div class="inner-modal-content">
+                    <h4 class="modal-title">Submission Rejected</h4>
+                    <p>{{errorMessage}} </p>
+                </div>
+            </div>
+            <div class="modal-back-button">
+                <button type="button" class="btn btn-default btn-sm backButton" (click)="close()">
+                        <i class="fa fa-chevron-circle-left backChevron" aria-hidden="true"></i> Back
+                </button>
+            </div>
+        </div>
     </div>
 </ng-template>
